--- a/public/scss/bourbon/addons/_font-stacks.scss
+++ b/public/scss/bourbon/addons/_font-stacks.scss
@@ -29,3 +29,13 @@ $monospace: "Bitstream Vera Sans Mono", "Consolas", "Courier", monospace;
 /// @type List
 
 $verdana: "Verdana", "Geneva", sans-serif;
+
+
+$NHaas: 'NHaasGroteskDSPro-55Rg', $helvetica, sans-serif;
+$NHaas-medium: 'NHaasGroteskDSPro-65Md', $helvetica, sans-serif;
+$NHaas-bold: 'NHaasGroteskDSPro-75Bd', $helvetica, sans-serif;
+
+$tiempos: 'TiemposTextWeb-Regular', $georgia, serif;
+$tiempos-italic: 'TiemposTextWeb-RegularItalic', $georgia, serif;
+$tiempos-semibold: 'TiemposTextWeb-Semibold', $georgia, serif;
+$tiempos-bold: 'TiemposHeadlineWeb-Bold', $georgia, serif;
