--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -33,103 +33,131 @@
 
 /* @import must be at top of file, otherwise CSS will not work */
 @import url("//hello.myfonts.net/count/2be4fd");
-@font-face {font-family: 'HaasTextItalic';src: url('fonts/2BE4FD_0_0.eot');src: url('fonts/2BE4FD_0_0.eot?#iefix') format('embedded-opentype'),url('fonts/2BE4FD_0_0.woff') format('woff'),url('fonts/2BE4FD_0_0.ttf') format('truetype'),url('fonts/2BE4FD_0_0.svg#wf') format('svg');}
-@font-face {font-family: 'HaasText';src: url('fonts/2BE4FD_1_0.eot');src: url('fonts/2BE4FD_1_0.eot?#iefix') format('embedded-opentype'),url('fonts/2BE4FD_1_0.woff') format('woff'),url('fonts/2BE4FD_1_0.ttf') format('truetype'),url('fonts/2BE4FD_1_0.svg#wf') format('svg');}
-@font-face {font-family: 'HaasDisplayBold';src: url('fonts/2BE4FD_2_0.eot');src: url('fonts/2BE4FD_2_0.eot?#iefix') format('embedded-opentype'),url('fonts/2BE4FD_2_0.woff') format('woff'),url('fonts/2BE4FD_2_0.ttf') format('truetype'),url('fonts/2BE4FD_2_0.svg#wf') format('svg');}
-@font-face {font-family: 'HaasTextBold';src: url('fonts/2BE4FD_3_0.eot');src: url('fonts/2BE4FD_3_0.eot?#iefix') format('embedded-opentype'),url('fonts/2BE4FD_3_0.woff') format('woff'),url('fonts/2BE4FD_3_0.ttf') format('truetype'),url('fonts/2BE4FD_3_0.svg#wf') format('svg');}
+@font-face {
+  font-family: 'HaasTextItalic';
+  src: url('fonts/2BE4FD_0_0.eot');
+  src: url('fonts/2BE4FD_0_0.eot?#iefix') format('embedded-opentype'),
+       url('fonts/2BE4FD_0_0.woff') format('woff'),
+       url('fonts/2BE4FD_0_0.ttf') format('truetype'),
+       url('fonts/2BE4FD_0_0.svg#wf') format('svg');
+}
+@font-face {
+  font-family: 'HaasText';
+  src: url('fonts/2BE4FD_1_0.eot');
+  src: url('fonts/2BE4FD_1_0.eot?#iefix') format('embedded-opentype'),
+       url('fonts/2BE4FD_1_0.woff') format('woff'),
+       url('fonts/2BE4FD_1_0.ttf') format('truetype'),
+       url('fonts/2BE4FD_1_0.svg#wf') format('svg');
+}
+@font-face {
+  font-family: 'HaasDisplayBold';
+  src: url('fonts/2BE4FD_2_0.eot');
+  src: url('fonts/2BE4FD_2_0.eot?#iefix') format('embedded-opentype'),
+       url('fonts/2BE4FD_2_0.woff') format('woff'),
+       url('fonts/2BE4FD_2_0.ttf') format('truetype'),
+       url('fonts/2BE4FD_2_0.svg#wf') format('svg');
+}
+@font-face {
+  font-family: 'HaasTextBold';
+  src: url('fonts/2BE4FD_3_0.eot');
+  src: url('fonts/2BE4FD_3_0.eot?#iefix') format('embedded-opentype'),
+       url('fonts/2BE4FD_3_0.woff') format('woff'),
+       url('fonts/2BE4FD_3_0.ttf') format('truetype'),
+       url('fonts/2BE4FD_3_0.svg#wf') format('svg');
+}
 
 @font-face {
-  font-family: 'font-family: AvenirNext-Demi, 'Helvetica Neue', Helvetica, Arial, sans-serif;';
+  font-family: 'AvenirNext-Demi';
   src: url('fonts/AvenirNext-Regular.eot');
   src: url('fonts/AvenirNext-Regular.eot?#iefix') format('embedded-opentype'),
-  url('fonts/AvenirNext-Regular.woff') format('woff');
+       url('fonts/AvenirNext-Regular.woff') format('woff');
 }
 @font-face {
   font-family: 'AvenirNext-Demi';
   src: url('fonts/AvenirNext-Demi.eot');
   src: url('fonts/AvenirNext-Demi.eot?#iefix') format('embedded-opentype'),
-  url('fonts/AvenirNext-Demi.woff') format('woff');
+       url('fonts/AvenirNext-Demi.woff') format('woff');
 }
 @font-face {
   font-family: 'TiemposHeadlineWeb-Bold';
   src: url('fonts/TiemposHeadlineWeb-Bold.eot');
   src: url('fonts/TiemposHeadlineWeb-Bold.eot?#iefix') format('embedded-opentype'),
-  url('fonts/TiemposHeadlineWeb-Bold.woff') format('woff');
+       url('fonts/TiemposHeadlineWeb-Bold.woff') format('woff');
 }
 
 @font-face {
   font-family: 'TiemposTextWeb-Regular';
   src: url('fonts/TiemposTextWeb-Regular.eot');
   src: url('fonts/TiemposTextWeb-Regular.eot?#iefix') format('embedded-opentype'),
-  url('fonts/TiemposTextWeb-Regular.woff') format('woff');
+       url('fonts/TiemposTextWeb-Regular.woff') format('woff');
 }
 
 @font-face {
-  font-family: 'TiemposTextWeb-RegularItalic';
+  font-family:'TiemposTextWeb-RegularItalic';
   src: url('fonts/TiemposTextWeb-RegularItalic.eot');
   src: url('fonts/TiemposTextWeb-RegularItalic.eot?#iefix') format('embedded-opentype'),
-  url('fonts/TiemposTextWeb-RegularItalic.woff') format('woff');
+       url('fonts/TiemposTextWeb-RegularItalic.woff') format('woff');
 }
 
 @font-face {
-  font-family: "TiemposTextWeb-Semibold";
-  src: url("http://cdn.gotraffic.net/business/public/fonts/TiemposTextWeb-Semibold.d5620036.eot") format("embedded-opentype"), 
-       url("http://cdn.gotraffic.net/business/public/fonts/TiemposTextWeb-Semibold.308dba60.woff") format("woff"), 
-       url("http://cdn.gotraffic.net/business/public/fonts/TiemposTextWeb-Semibold.4d2044a5.svg") format("svg");
+  font-family: 'TiemposTextWeb-Semibold';
+  src: url('http://cdn.gotraffic.net/business/public/fonts/TiemposTextWeb-Semibold.d5620036.eot') format('embedded-opentype'), 
+       url('http://cdn.gotraffic.net/business/public/fonts/TiemposTextWeb-Semibold.308dba60.woff') format('woff'), 
+       url('http://cdn.gotraffic.net/business/public/fonts/TiemposTextWeb-Semibold.4d2044a5.svg') format('svg');
 }
 
 @font-face {
   font-family: 'NHaasGroteskDSPro-75Bd';
   src: url('fonts/NHaasGroteskDSPro-75Bd.eot');
   src: url('fonts/NHaasGroteskDSPro-75Bd.eot?#iefix') format('embedded-opentype'),
-  url('fonts/NHaasGroteskDSPro-75Bd.woff') format('woff');
+       url('fonts/NHaasGroteskDSPro-75Bd.woff') format('woff');
 }
 
 @font-face {
   font-family: 'NHaasGroteskDSPro-65Md';
   src: url('fonts/NHaasGroteskDSPro-65Md.eot');
   src: url('fonts/NHaasGroteskDSPro-65Md.eot?#iefix') format('embedded-opentype'),
-  url('fonts/NHaasGroteskDSPro-65Md.woff') format('woff');
+       url('fonts/NHaasGroteskDSPro-65Md.woff') format('woff');
 }
 
 @font-face {
   font-family: 'NHaasGroteskDSPro-55Rg';
   src: url('fonts/NHaasGroteskDSPro-55Rg.eot');
   src: url('fonts/NHaasGroteskDSPro-55Rg.eot?#iefix') format('embedded-opentype'),
-  url('fonts/NHaasGroteskDSPro-55Rg.eot') format('woff');
+       url('fonts/NHaasGroteskDSPro-55Rg.eot') format('woff');
 }
 
 @font-face {
   font-family:'BWHaasText-55Roman';
-  src: url("fonts/BWHaasText-55Roman.otf") format('opentype');
+  src: url('fonts/BWHaasText-55Roman.otf') format('opentype');
 }
 
 @font-face {
   font-family:'BWHaasHead-25XThin';
-  src: url("fonts/BWHaasHead-25XThin.otf") format('opentype');
+  src: url('fonts/BWHaasHead-25XThin.otf') format('opentype');
 }
 
 @font-face {
   font-family:'BWHaasText-56Italic';
-  src: url("fonts/BWHaasText-56Italic.otf") format('opentype');
+  src: url('fonts/BWHaasText-56Italic.otf') format('opentype');
 }
 
 @font-face {
   font-family:'BWHaasText-65Medium';
-  src: url("fonts/BWHaasText-65Medium.otf") format('opentype');
+  src: url('fonts/BWHaasText-65Medium.otf') format('opentype');
 }
 
 @font-face {
   font-family:'BWHaasText-66MediumItalic';
-  src: url("fonts/BWHaasText-66MediumItalic.otf") format('opentype');
+  src: url('fonts/BWHaasText-66MediumItalic.otf') format('opentype');
 }
 
 @font-face {
   font-family:'BWHaasText-75Bold';
-  src: url("fonts/BWHaasText-75Bold.otf") format('opentype');
+  src: url('fonts/BWHaasText-75Bold.otf') format('opentype');
 }
 
 @font-face {
   font-family:'BWHaasText-76BoldItalic';
-  src: url("fonts/BWHaasText-76BoldItalic.otf") format('opentype');
+  src: url('fonts/BWHaasText-76BoldItalic.otf') format('opentype');
 }
