--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,8 +14,8 @@ button {
   color: #fff;
   cursor: pointer;
   display: inline-block;
-  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
-  font-size: 1em;
+  font-family: "TiemposTextWeb-Regular", "Georgia", "Cambria", "Times New Roman", "Times", serif, serif;
+  font-size: 1.125em;
   font-weight: 600;
   line-height: 1;
   padding: 0.75em 1em;
@@ -42,8 +42,8 @@ button:disabled {
 fieldset {
   background-color: #f7f7f7;
   border: 1px solid #ddd;
-  margin: 0 0 0.75em;
-  padding: 1.5em;
+  margin: 0 0 0.8125em;
+  padding: 1.625em;
 }
 
 /* line 8, ../scss/base/_forms.scss */
@@ -51,14 +51,14 @@ input,
 label,
 select {
   display: block;
-  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
-  font-size: 1em;
+  font-family: "TiemposTextWeb-Regular", "Georgia", "Cambria", "Times New Roman", "Times", serif, serif;
+  font-size: 1.125em;
 }
 
 /* line 16, ../scss/base/_forms.scss */
 label {
   font-weight: 600;
-  margin-bottom: 0.375em;
+  margin-bottom: 0.40625em;
 }
 /* line 20, ../scss/base/_forms.scss */
 label.required::after {
@@ -78,10 +78,10 @@ textarea {
   border-radius: 3px;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
   box-sizing: border-box;
-  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
-  font-size: 1em;
-  margin-bottom: 0.75em;
-  padding: 0.5em;
+  font-family: "TiemposTextWeb-Regular", "Georgia", "Cambria", "Times New Roman", "Times", serif, serif;
+  font-size: 1.125em;
+  margin-bottom: 0.8125em;
+  padding: 0.54167em;
   transition: border-color;
   width: 100%;
 }
@@ -118,18 +118,18 @@ input[type="search"] {
 input[type="checkbox"],
 input[type="radio"] {
   display: inline;
-  margin-right: 0.375em;
+  margin-right: 0.40625em;
 }
 
 /* line 69, ../scss/base/_forms.scss */
 input[type="file"] {
-  padding-bottom: 0.75em;
+  padding-bottom: 0.8125em;
   width: 100%;
 }
 
 /* line 74, ../scss/base/_forms.scss */
 select {
-  margin-bottom: 1.5em;
+  margin-bottom: 1.625em;
   max-width: 100%;
   width: auto;
 }
@@ -143,12 +143,12 @@ ol {
 }
 /* line 20, ../scss/base/_lists.scss */
 dl {
-  margin-bottom: 0.75em;
+  margin-bottom: 0.8125em;
 }
 /* line 23, ../scss/base/_lists.scss */
 dl dt {
   font-weight: bold;
-  margin-top: 0.75em;
+  margin-top: 0.8125em;
 }
 /* line 28, ../scss/base/_lists.scss */
 dl dd {
@@ -162,7 +162,7 @@ table {
   -ms-font-feature-settings: "kern", "liga", "tnum";
   font-feature-settings: "kern", "liga", "tnum";
   border-collapse: collapse;
-  margin: 0.75em 0;
+  margin: 0.8125em 0;
   table-layout: fixed;
   width: 100%;
 }
@@ -171,14 +171,14 @@ table {
 th {
   border-bottom: 1px solid #b7b7b7;
   font-weight: 600;
-  padding: 0.75em 0;
+  padding: 0.8125em 0;
   text-align: left;
 }
 
 /* line 16, ../scss/base/_tables.scss */
 td {
   border-bottom: 1px solid #ddd;
-  padding: 0.75em 0;
+  padding: 0.8125em 0;
 }
 
 /* line 21, ../scss/base/_tables.scss */
@@ -196,9 +196,9 @@ body {
   font-feature-settings: "kern", "liga", "pnum";
   -webkit-font-smoothing: antialiased;
   color: #333;
-  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
-  font-size: 1em;
-  line-height: 1.5;
+  font-family: "TiemposTextWeb-Regular", "Georgia", "Cambria", "Times New Roman", "Times", serif, serif;
+  font-size: 1.125em;
+  line-height: 1.625;
 }
 
 /* line 10, ../scss/base/_typography.scss */
@@ -208,46 +208,80 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
-  font-size: 1em;
+  font-family: "NHaasGroteskDSPro-75Bd", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif, sans-serif;
   line-height: 1.2;
-  margin: 0 0 0.75em;
+  margin: 0 0 0.8125em;
 }
 
 /* line 22, ../scss/base/_typography.scss */
-p {
-  margin: 0 0 0.75em;
+h1 {
+  font-size: 3.222em;
 }
 
 /* line 26, ../scss/base/_typography.scss */
+p {
+  margin: 0 0 1.625em;
+}
+
+/* line 30, ../scss/base/_typography.scss */
 a {
   color: #477dca;
   text-decoration: none;
   transition: color 0.1s linear;
 }
-/* line 31, ../scss/base/_typography.scss */
+/* line 35, ../scss/base/_typography.scss */
 a:active, a:focus, a:hover {
   color: #2c5999;
 }
-/* line 37, ../scss/base/_typography.scss */
+/* line 41, ../scss/base/_typography.scss */
 a:active, a:focus {
   outline: none;
 }
 
-/* line 43, ../scss/base/_typography.scss */
+/* line 47, ../scss/base/_typography.scss */
 hr {
   border-bottom: 1px solid #ddd;
   border-left: none;
   border-right: none;
   border-top: none;
-  margin: 1.5em 0;
+  margin: 1.625em 0;
 }
 
-/* line 51, ../scss/base/_typography.scss */
+/* line 55, ../scss/base/_typography.scss */
 img,
 picture {
   margin: 0;
   max-width: 100%;
+}
+
+/* page style */
+/* line 9, ../scss/_main.scss */
+.lede-wrap {
+  position: relative;
+}
+
+/* line 13, ../scss/_main.scss */
+.lede-content, #main {
+  width: 50%;
+  margin: 0 auto;
+}
+
+/* line 20, ../scss/_main.scss */
+.lede-content {
+  position: relative;
+  top: -7em;
+}
+
+/* line 25, ../scss/_main.scss */
+.lede-image {
+  overflow: hidden;
+  height: 400px;
+}
+
+/* line 30, ../scss/_main.scss */
+.hed {
+  color: #fff;
+  opacity: 0.8;
 }
 
 /*-- MEDIA QUERIES -- */
