--- a/public/scss/base/_typography.scss
+++ b/public/scss/base/_typography.scss
@@ -14,13 +14,17 @@ h4,
 h5,
 h6 {
   font-family: $heading-font-family;
-  font-size: $base-font-size;
+  // font-size: $base-font-size;
   line-height: $heading-line-height;
   margin: 0 0 $small-spacing;
 }
 
+h1 {
+  font-size: 3.222em
+}
+
 p {
-  margin: 0 0 $small-spacing;
+  margin: 0 0 $base-spacing;
 }
 
 a {
