--- a/public/scss/base/_variables.scss
+++ b/public/scss/base/_variables.scss
@@ -1,12 +1,13 @@
 // Typography
-$base-font-family: $helvetica;
-$heading-font-family: $base-font-family;
+$base-font-family: $tiempos;
+$heading-font-family: $NHaas-bold;
+
 
 // Font Sizes
-$base-font-size: 1em;
+$base-font-size: 1.125em;
 
 // Line height
-$base-line-height: 1.5;
+$base-line-height: 1.625;
 $heading-line-height: 1.2;
 
 // Other Sizes
