--- a/public/scss/_main.scss
+++ b/public/scss/_main.scss
@@ -32,7 +32,10 @@
 	opacity: 0.8;
 }
 
-img {
-	// max-width: 100%;
+blockquote {
+	font: 1.6em/1.2em $NHaas-medium;
+	float: left;
+	margin-top: 0;
+	margin-left: -200px;
+	width: 70%;
 }
-
