Added temp speaker photos. Cleaned up the layout a bit.

--- a/public/scss/base/_variables.scss
+++ b/public/scss/base/_variables.scss
@@ -21,6 +21,7 @@ $blue: #477dca;
 $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
+$black: rgb(60, 60, 60);
 
 // Font Colors
 $base-background-color: #fff;
