--- a/public/css/style.css
+++ b/public/css/style.css
@@ -211,34 +211,41 @@ h6 {
   font-family: "NHaasGroteskDSPro-75Bd", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif, sans-serif;
   line-height: 1.2;
   margin: 0 0 0.8125em;
+  font-weight: normal;
 }
 
-/* line 22, ../scss/base/_typography.scss */
+/* line 23, ../scss/base/_typography.scss */
 h1 {
-  font-size: 3.222em;
+  font-size: 4em;
+  line-height: 1.1em;
 }
 
-/* line 26, ../scss/base/_typography.scss */
+/* line 28, ../scss/base/_typography.scss */
+h2 {
+  margin-top: 4em;
+}
+
+/* line 32, ../scss/base/_typography.scss */
 p {
   margin: 0 0 1.625em;
 }
 
-/* line 30, ../scss/base/_typography.scss */
+/* line 36, ../scss/base/_typography.scss */
 a {
   color: #477dca;
   text-decoration: none;
   transition: color 0.1s linear;
 }
-/* line 35, ../scss/base/_typography.scss */
+/* line 41, ../scss/base/_typography.scss */
 a:active, a:focus, a:hover {
   color: #2c5999;
 }
-/* line 41, ../scss/base/_typography.scss */
+/* line 47, ../scss/base/_typography.scss */
 a:active, a:focus {
   outline: none;
 }
 
-/* line 47, ../scss/base/_typography.scss */
+/* line 53, ../scss/base/_typography.scss */
 hr {
   border-bottom: 1px solid #ddd;
   border-left: none;
@@ -247,19 +254,15 @@ hr {
   margin: 1.625em 0;
 }
 
-/* line 55, ../scss/base/_typography.scss */
+/* line 61, ../scss/base/_typography.scss */
 img,
 picture {
-  margin: 0;
+  margin: 0 auto;
   max-width: 100%;
+  display: block;
 }
 
 /* page style */
-/* line 9, ../scss/_main.scss */
-.lede-wrap {
-  position: relative;
-}
-
 /* line 13, ../scss/_main.scss */
 .lede-content, #main {
   width: 50%;
@@ -269,28 +272,67 @@ picture {
 /* line 20, ../scss/_main.scss */
 .lede-content {
   position: relative;
-  top: -7em;
 }
 
-/* line 25, ../scss/_main.scss */
+/* line 24, ../scss/_main.scss */
 .lede-image {
   overflow: hidden;
   height: 400px;
 }
 
-/* line 30, ../scss/_main.scss */
+/* line 29, ../scss/_main.scss */
 .hed {
   color: #fff;
   opacity: 0.8;
+  position: absolute;
+  z-index: 1000;
+  top: -2.325em;
 }
 
-/* line 35, ../scss/_main.scss */
+/* line 37, ../scss/_main.scss */
+.subhed {
+  margin-top: 0.5em;
+  margin-bottom: 0.75em;
+}
+
+/* line 42, ../scss/_main.scss */
+.byline {
+  font-family: "NHaasGroteskDSPro-75Bd", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif, sans-serif;
+  margin-bottom: 0em;
+  padding-right: 0.5em;
+}
+
+/* line 48, ../scss/_main.scss */
+.dateline {
+  font-family: "NHaasGroteskDSPro-55Rg", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif, sans-serif;
+  padding-left: 0.5em;
+  font-size: 0.825em;
+}
+
+/* line 54, ../scss/_main.scss */
+.short-line {
+  width: 70px;
+  border-bottom: 2px solid #3c3c3c;
+  margin-top: 0;
+}
+
+/* line 61, ../scss/_main.scss */
 blockquote {
   font: 1.6em/1.2em "NHaasGroteskDSPro-65Md", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif, sans-serif;
   float: left;
   margin-top: 0;
   margin-left: -200px;
   width: 70%;
+}
+
+/* line 73, ../scss/_main.scss */
+.block {
+  width: 100%;
+  height: 450px;
+  background-color: pink;
+  margin-bottom: 3em;
+  font-family: sans-serif;
+  font-weight: bolder;
 }
 
 /*-- MEDIA QUERIES -- */
