--- a/public/scss/_main.scss
+++ b/public/scss/_main.scss
@@ -7,7 +7,7 @@
 }
 
 .lede-wrap {
-	position: relative;
+
 }
 
 .lede-content , #main {
@@ -19,7 +19,6 @@
 //LEDE
 .lede-content {
 	position: relative;
-	top: -7em;
 }
 
 .lede-image {
@@ -30,7 +29,34 @@
 .hed {
 	color: $base-background-color;
 	opacity: 0.8;
+	position: absolute;
+	z-index: 1000;
+	top: -2.325em;
 }
+
+.subhed {
+	margin-top: 0.5em;
+	margin-bottom: 0.75em;
+}
+
+.byline {
+	font-family: $NHaas-bold;
+	margin-bottom: 0em;
+	padding-right: 0.5em;
+}
+
+.dateline {
+	font-family: $NHaas;
+	padding-left: 0.5em;
+	font-size: 0.825em;
+}
+
+.short-line {
+	width: 70px;
+	border-bottom: 2px solid $black;
+	margin-top: 0;
+}
+
 
 blockquote {
 	font: 1.6em/1.2em $NHaas-medium;
@@ -38,4 +64,17 @@ blockquote {
 	margin-top: 0;
 	margin-left: -200px;
 	width: 70%;
+}
+
+
+
+
+///// PLACEHOLDERS
+.block {
+	width: 100%;
+	height: 450px;
+	background-color: pink;
+	margin-bottom: 3em;
+	font-family: sans-serif;
+	font-weight: bolder;
 }
