--- a/public/scss/base/_typography.scss
+++ b/public/scss/base/_typography.scss
@@ -21,7 +21,12 @@ h6 {
 }
 
 h1 {
-  font-size: 3.222em
+  font-size: 4em;
+  line-height: 1.1em;
+}
+
+h2 {
+  margin-top: 4em;
 }
 
 p {
@@ -55,6 +60,7 @@ hr {
 
 img,
 picture {
-  margin: 0;
+  margin: 0 auto;
   max-width: 100%;
+  display: block;
 }
