Updated Blockquote style.

--- a/public/scss/_main.scss
+++ b/public/scss/_main.scss
@@ -59,13 +59,25 @@
 
 
 blockquote {
-	font: 1.6em/1.2em $NHaas-medium;
 	float: left;
 	margin-top: 0;
 	margin-left: -200px;
 	width: 70%;
+	@include clearfix;
 }
 
+.quote {
+	font: 1.6em/1.2em $NHaas-medium;
+}
+
+.quoter {
+	font-family: $NHaas;
+	margin-bottom: 0;
+}
+
+.quote-img {
+	float: right;
+}
 
 
 
