--- a/public/css/style.css
+++ b/public/css/style.css
@@ -318,14 +318,35 @@ picture {
 
 /* line 61, ../scss/_main.scss */
 blockquote {
-  font: 1.6em/1.2em "NHaasGroteskDSPro-65Md", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif, sans-serif;
   float: left;
   margin-top: 0;
   margin-left: -200px;
   width: 70%;
 }
+/* line 20, ../scss/bourbon/addons/_clearfix.scss */
+blockquote::after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+/* line 69, ../scss/_main.scss */
+.quote {
+  font: 1.6em/1.2em "NHaasGroteskDSPro-65Md", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif, sans-serif;
+}
 
 /* line 73, ../scss/_main.scss */
+.quoter {
+  font-family: "NHaasGroteskDSPro-55Rg", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif, sans-serif;
+  margin-bottom: 0;
+}
+
+/* line 78, ../scss/_main.scss */
+.quote-img {
+  float: right;
+}
+
+/* line 85, ../scss/_main.scss */
 .block {
   width: 100%;
   height: 450px;
